--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -7,4 +7,7 @@
 
 <li><%= link_to 'Back', root_path %></li>
 
+<li><%= link_to 'Delete', article_path(@article), 
+method: :delete, 
+data: { confirm: "Are you sure?"} %></li>
 </ul>
