--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,13 +1,14 @@
-<h1><%= @article.title %></h1>
+<article class="blog-post">
+    <h2 class="blog-post-title"><%= @article.title%></h2>
+    <p class="blog-post-meta"><%= month_day_comma_year(@article.created_at)%> by <a href="#">Lucas</a></p>
 
-<p><%= @article.body %></p>
+    <p><%= @article.body %></p>
 
-<ul>
-<li><%= link_to 'Edit', edit_article_path(@article) %></li>
+   <%= link_to 'Edit', edit_article_path(@article), class: 'btn btn-secondary' %>
 
-<li><%= link_to 'Back', root_path %></li>
-
-<li><%= link_to 'Delete', article_path(@article), 
+   <%= link_to 'Delete', article_path(@article), class: 'btn btn-danger',
 method: :delete, 
-data: { confirm: "Are you sure?"} %></li>
-</ul>
+data: { confirm: "Are you sure?"} %>
+<%= link_to 'Back', root_path, class: 'btn btn-secondary' %>
+
+</article>
